Fixed chat list spacing

--- a/src/components/ChatCard/ChatCard.css
+++ b/src/components/ChatCard/ChatCard.css
@@ -3,7 +3,7 @@
   height: 35vh;
   display: flex;
   align-items: stretch;
-  padding-top: 2em;
+  padding-top: 1em;
   padding-bottom: 1em;
 }
 
