--- a/src/components/ChatList/ChatList.css
+++ b/src/components/ChatList/ChatList.css
@@ -1,5 +1,6 @@
 .chat-list {
-  padding-top: 6em;
+  padding-top: 7.5em;
+  padding-bottom: 6em;
   display: flex;
   flex-direction: column;
   justify-content: center;
